add support for insert results
Use ordered and write concern to control expected results back from
mongo.  This is just the start, we need to provide more information
during exception states and more testing.